<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#3BB9FF"
        android:text="@string/reminder"
        android:textColor="#FFFFFFFF" />

    <LinearLayout
        android:id="@+id/panelRmdr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#FFFFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="text" />

            <EditText
                android:id="@+id/txtMsg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/message"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/postMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:visibility="gone" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seldate" 
                android:onClick="showDateDialog"
                android:visibility="gone" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seltime"
                android:onClick="showTimeDialog" 
                android:visibility="gone" />

            <Button
                android:id="@+id/msgB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="66dp"
                android:text="@string/scheduleMsg" 
                android:onClick="scheduleMessageAlarm"/>

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#4CC417"
        android:text="@string/email"
        android:textColor="#FFFFFFFF" />

    <LinearLayout
        android:id="@+id/panelEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#FFFFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/panelSettings1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/strMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="e-mail" />

            <EditText
                android:id="@+id/txtMail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/panelSettings2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/strPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFA62F"
        android:text="@string/settings"
        android:textColor="#FFFFFFFF" />

    <LinearLayout
        android:id="@+id/panelSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#FFFFFFFF"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkSms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sms"
            android:textColor="#ff355689" >
        </CheckBox>

        <CheckBox
            android:id="@+id/checkFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/social"
            android:textColor="#ff355689" />
    </LinearLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F6358A"
        android:text="Privacy"
        android:textColor="#FFFFFFFF" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#A74AC7"
        android:text="Privacy"
        android:textColor="#FFFFFFFF" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#A5DF00"
        android:text="Recipe Search"
        android:textColor="#FFFFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/recipeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Search" />

    </LinearLayout>

</LinearLayout>
